Allow to create text notes from website

--- a/website/templates/components/map.pug
+++ b/website/templates/components/map.pug
@@ -29,7 +29,7 @@ script.
 	// Add feature button
 	createAddFeatureButton(document.querySelector("#pdm-map-sidebar .pdm-sidebar-buttons"), null, { mini: true });
 	if(editors.pdm && editors.pdm.add) {
-		createAddFeatureButton(document.getElementById("legend-edit-button"), "btn-block", { mapcoords: true });
+		createAddFeatureButton(document.getElementById("legend-edit-button"), "btn-block", { mapcoords: true, textnote: true });
 	}
 
 	// Geolocate
