--- a/website/templates/components/map.pug
+++ b/website/templates/components/map.pug
@@ -27,9 +27,9 @@ script.
 	map.addControl(new mapboxgl.NavigationControl({ showCompass: false }));
 
 	// Add feature button
-	createAddFeatureButton(document.querySelector("#pdm-map-sidebar .pdm-sidebar-buttons"), null, { mini: true });
-	if(editors.pdm && editors.pdm.add) {
-		createAddFeatureButton(document.getElementById("legend-edit-button"), "btn-block", { mapcoords: true, textnote: true });
+	createFeatureButton(document.querySelector("#pdm-map-sidebar .pdm-sidebar-buttons"), "add", null, { mini: true });
+	if(editors.pdm) {
+		createFeatureButton(document.getElementById("legend-edit-button"), "add", "btn-block", { mapcoords: true, textnote: true });
 	}
 
 	// Geolocate
@@ -174,7 +174,7 @@ script.
 
 		if(!features || features.length === 0) {
 			if(!lastCallbackFeatureLocation) {
-				cancelAddNewFeature();
+				cancelEdit();
 				showMarker();
 			}
 		}
@@ -182,7 +182,7 @@ script.
 			if(lastCallbackFeatureLocation) {
 				cancelAskFeatureLocation();
 			}
-			cancelAddNewFeature(false, true);
+			cancelEdit(false, true);
 			const coordinates = features[0].geometry.coordinates.slice();
 			while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
 				coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
