--- a/website/templates/components/map_sidebar_feature.pug
+++ b/website/templates/components/map_sidebar_feature.pug
@@ -1,59 +1,12 @@
 div.d-none#map-marker-plus
 	include ../../images/marker_plus.svg
+div.d-none#map-marker-edit
+	include ../../images/marker_edit.svg
 
 script.
 	const osmSources = !{JSON.stringify(datasources.filter(ds => ds.source === "osm"))};
 	const osmCompareSources = !{JSON.stringify(datasources.filter(ds => ds.source === "osm-compare"))};
 	const editors = !{JSON.stringify(editors)};
-
-	// Links
-	function getLinksOsm(f) {
-		const [ lon, lat ] = f.geometry.coordinates;
-
-		return [
-			{ title: "JOSM", hrefs: [`#{CONFIG.JOSM_REMOTE_URL}/load_and_zoom?bottom=${lat-0.0005}&top=${lat+0.0005}&right=${lon+0.0005}&left=${lon-0.0005}&select=${f.properties.osm_id.replace("/", "")}&#{josmParams}`], hrefsError: "Une erreur s'est produite avec la télécommande JOSM" },
-			{ title: "iD", href: `#{CONFIG.OSM_URL}/edit?${f.properties.osm_id.split("/").join("=")}#map=20/${lat}/${lon}&#{idParams}` },
-			{ title: "OSM", href: `#{CONFIG.OSM_URL}/${f.properties.osm_id}` },
-			{ title: "Mapillary", href: `#{CONFIG.MAPILLARY_URL}/app/?lat=${lat}&lng=${lon}&z=18` }
-		];
-	}
-
-	function linksToDom(links, container) {
-		container.classList.add("text-center");
-		links.forEach((l,i) => {
-			const linkDom = document.createElement("a");
-			linkDom.appendChild(document.createTextNode(l.title));
-
-			// Simple link
-			if(l.href) {
-				linkDom.href = l.href;
-				linkDom.target = "_blank";
-				linkDom.rel = "noopener";
-			}
-			// Several links (JOSM) : call one, wait 3s, call second...
-			else if(l.hrefs) {
-				linkDom.classList.add("pdm-link");
-				linkDom.addEventListener("click", () => {
-					const next = () => {
-						const url = l.hrefs.shift();
-						if(url) {
-							fetch(url)
-							.then(() => setTimeout(next, 3000))
-							.catch(e => {
-								console.error(e);
-								if(l.hrefsError) { alert(l.hrefsError); }
-							});
-						}
-					};
-					next();
-				});
-			}
-
-			if(i > 0) { container.appendChild(document.createTextNode(" | ")); }
-			container.appendChild(linkDom);
-		});
-		return container;
-	}
 
 	// Mark as done/false in Osmose
 	const filteredUuids = [];
@@ -97,32 +50,34 @@ script.
 		}
 	}
 
-	// Generate add to map button
-	function createAddFeatureButton(container, classes = null, options = {}) {
-		if(editors.pdm && editors.pdm.add) {
-			const optsPdm = Object.fromEntries(Object.entries(options).filter(e => ["tags", "onInternalEdit"].includes(e[0])));
+	// Generate button for feature creation / editing
+	function createFeatureButton(container, mode = "add", classes = null, options = {}) {
+		if(editors.pdm) {
+			const optsPdm = Object.fromEntries(Object.entries(options).filter(e => ["tags", "onInternalEdit", "originalCoordinates"].includes(e[0])));
 
 			// Main button
 			const button = document.createElement("button");
 			button.classList.add("editor-add-btn", "btn");
 			button.setAttribute("type", "button");
-			button.setAttribute("title", editors.pdm.add.title);
+			button.setAttribute("title", editors.pdm.title[mode]);
 
 			const buttonIcon = document.createElement("span");
 			buttonIcon.classList.add("d-inline-block", "container-svg-fa");
-			buttonIcon.style.height = "24px";
-			buttonIcon.style.width = "14px";
-			buttonIcon.appendChild(document.getElementById("map-marker-plus").firstChild.cloneNode(true));
+			buttonIcon.style.height = options.mini ? "24px" : "30px";
+			buttonIcon.appendChild(document.getElementById(mode === "add" ? "map-marker-plus" : "map-marker-edit").firstChild.cloneNode(true));
 			button.appendChild(buttonIcon);
+
+			// PdM action
+			const pdmfct = mode === "add" ? e => onStartNewFeature(optsPdm) : e => onStartEditFeature(Object.assign({ osmid: options.osmid }, optsPdm));
 
 			if(options.mini) {
 				button.classList.add("btn-outline-primary", "btn-sm");
-				button.addEventListener("click", e => onStartNewFeature(optsPdm));
+				button.addEventListener("click", pdmfct);
 				if(typeof classes === "string" && classes.length > 0) { button.classList.add(...classes.split(" ")); }
 				container.appendChild(button);
 			}
 			else {
-				const { lat, lng } = map.getCenter();
+				const { lat, lng } = options.originalCoordinates || map.getCenter();
 				let dropButton;
 				button.classList.add("btn-primary", "d-flex", "align-items-center", "justify-content-center");
 				buttonIcon.classList.add("mr-3");
@@ -132,7 +87,7 @@ script.
 				group.classList.add("btn-group");
 				if(typeof classes === "string" && classes.length > 0) { group.classList.add(...classes.split(" ")); }
 
-				button.appendChild(document.createTextNode(options.title || editors.pdm.add.title));
+				button.appendChild(document.createTextNode(options.title || editors.pdm.title[mode]));
 				group.appendChild(button);
 
 				// Dropdown menu
@@ -148,12 +103,12 @@ script.
 					group.appendChild(dropButton);
 
 					dropButton.classList.add("dropdown-toggle-split");
-					button.addEventListener("click", e => onStartNewFeature(optsPdm));
+					button.addEventListener("click", pdmfct);
 
 					const editWithPdm = document.createElement("a");
 					editWithPdm.classList.add("dropdown-item");
 					editWithPdm.appendChild(document.createTextNode("Avec l'éditeur intégré"));
-					editWithPdm.addEventListener("click", e => onStartNewFeature(optsPdm));
+					editWithPdm.addEventListener("click", pdmfct);
 					dropdown.appendChild(editWithPdm);
 				}
 				else {
@@ -181,7 +136,7 @@ script.
 				const editWithJOSM = document.createElement("a");
 				editWithJOSM.classList.add("dropdown-item", "d-none", "d-sm-block");
 				editWithJOSM.addEventListener("click", () => {
-					const { lat, lng } = map.getCenter();
+					const { lat, lng } = options.originalCoordinates || map.getCenter();
 					const urlsToLoad = [`#{CONFIG.JOSM_REMOTE_URL}/load_and_zoom?bottom=${lat-0.0005}&top=${lat+0.0005}&right=${lng+0.0005}&left=${lng-0.0005}${options.osmid && `&select=${options.osmid.replace("/", "")}` || ""}&#{josmParams}`];
 					if(options.tags && !options.osmid) {
 						urlsToLoad.push(`#{CONFIG.JOSM_REMOTE_URL}/add_node?lon=${lng}&lat=${lat}&addtags=${encodeURIComponent(Object.entries(options.tags).map(e => e.join("=")).join("|"))}`);
@@ -215,7 +170,7 @@ script.
 					const editWithPdmNote = document.createElement("a");
 					editWithPdmNote.classList.add("dropdown-item");
 					editWithPdmNote.appendChild(document.createTextNode("Via une note de carte"));
-					editWithPdmNote.addEventListener("click", e => onStartNewFeature(Object.assign({ textnote: true }, optsPdm)));
+					editWithPdmNote.addEventListener("click", onStartTextNote);
 					dropdown.appendChild(editWithPdmNote);
 				}
 
@@ -262,6 +217,7 @@ script.
 	function getDescription(feature) {
 		const s = feature.source;
 		const p = feature.properties;
+		const originalCoordinates = { lng: feature.geometry.coordinates[0], lat: feature.geometry.coordinates[1] };
 		const resDiv = document.createElement("div");
 
 		// Retrieve metadata on Osmose API
@@ -331,13 +287,14 @@ script.
 				divButtonFalse.addEventListener("click", markOsmose("false", feature));
 
 				const elem = meta.elems && meta.elems.length > 0 && meta.elems[0];
-				createAddFeatureButton(resDiv, "btn-block mt-3 mb-1 dropup", {
+				createFeatureButton(resDiv, "add", "btn-block mt-3 mb-1 dropup", {
 					title: buttons.add,
 					tags: tagsForEdit,
 					osmid: elem && elem.type+"/"+elem.id,
 					osmoseuuid: meta.uuid,
 					onExternalEdit: () => divButtons.insertBefore(divButtonDone, divButtonFalse),
-					onInternalEdit: markOsmose("done", feature, true)
+					onInternalEdit: markOsmose("done", feature, true),
+					originalCoordinates
 				});
 
 				divButtons.appendChild(divButtonFalse);
@@ -362,6 +319,7 @@ script.
 
 			// Try to read tags out of comments
 			const tags = {};
+			let featureId = null;
 			cmts.forEach(cmt => {
 				cmt.text.split("\n").forEach(line => {
 					const parts = line.split("=");
@@ -372,8 +330,29 @@ script.
 							tags[key.trim()] = value.trim();
 						}
 					}
+					// Check for OSM ID
+					else {
+						const found = line.match(/(node|way|relation)\/[0-9]+/);
+						if(found) {
+							featureId = found[0];
+						}
+					}
 				});
 			});
+
+			// Check if feature corresponding to featureId can be found
+			let feature;
+			if(featureId) {
+				for(let osmSourceId in osmSources) {
+					const sourceId = "osm_"+osmSourceId;
+					const features = map.querySourceFeatures(sourceId, { filter: ["==", ["get", "osm_id"], featureId], sourceLayer: `public.project_#{id.split("_").pop()}` });
+					if(features.length === 1) {
+						feature = features[0];
+						break;
+					}
+				}
+				if(!feature) { delete featureId; }
+			}
 
 			const divButtons = document.createElement("div");
 			divButtons.classList.add("btn-group", "btn-group-sm", "btn-block", "mt-1");
@@ -410,8 +389,10 @@ script.
 			divButtonComment.href = `#{CONFIG.OSM_URL}/note/${p.id}`;
 			divButtonComment.target = "_blank";
 
-			createAddFeatureButton(resDiv, "btn-block mb-1 dropup", {
+			createFeatureButton(resDiv, feature ? "edit": "add", "btn-block mb-1 dropup", {
 				noteid: "note/"+p.id,
+				osmid: feature ? featureId : undefined,
+				originalCoordinates: feature ? { lng: feature.geometry.coordinates[0], lat: feature.geometry.coordinates[1] } : originalCoordinates,
 				tags,
 				onExternalEdit: () => divButtons.insertBefore(divButtonDone, divButtonComment),
 				onInternalEdit: () => closeNote(p)
@@ -433,7 +414,11 @@ script.
 					<textarea class="form-control form-control-sm" rows="${Object.keys(tags).length}" readonly>${Object.entries(tags).map(e => e.join("=")).join("\n")}</textarea>
 				</div>`;
 
-			resDiv.appendChild(linksToDom(getLinksOsm(feature), document.createElement("div")));
+			createFeatureButton(resDiv, "edit", "btn-block mt-2 dropup", {
+				osmid: p.osm_id,
+				tags,
+				originalCoordinates
+			});
 		}
 		// OSM comparison features
 		else if(s.startsWith("osm-compare_")) {
@@ -449,7 +434,7 @@ script.
 					<textarea class="form-control form-control-sm" rows="${Object.keys(tags).length}" readonly>${Object.entries(tags).map(e => e.join("=")).join("\n")}</textarea>
 				</div>`;
 
-			createAddFeatureButton(resDiv, "btn-block mt-2 dropup");
+			createFeatureButton(resDiv, "add", "btn-block mt-2 dropup", { originalCoordinates });
 		}
 		else {
 			resDiv.innerHTML = "<ul>"+Object.entries(p).map(e => "<li>"+e.join(" : ")+"</li>").join("")+"</ul>";
