--- a/website/templates/components/map_sidebar_feature.pug
+++ b/website/templates/components/map_sidebar_feature.pug
@@ -346,8 +346,8 @@ script.
 				for(let osmSourceId in osmSources) {
 					const sourceId = "osm_"+osmSourceId;
 					const features = map.querySourceFeatures(sourceId, { filter: ["==", ["get", "osm_id"], featureId], sourceLayer: `public.project_#{id.split("_").pop()}` });
-					if(features.length === 1) {
-						feature = features[0];
+					if(features.length >= 1) {
+						feature = features.pop();
 						break;
 					}
 				}
