Use signup/login label for user buttons (closes #55)

--- a/website/templates/components/stats.pug
+++ b/website/templates/components/stats.pug
@@ -8,7 +8,7 @@ div.row
 	div.col-12.mb-4
 		h3 Podium
 		p#stats-leaderboard-noauth.text-center
-			| Connectez-vous pour voir le podium
+			| Inscrivez-vous ou connectez-vous pour voir le podium
 			br.mb-2
 			+user_connect
 		div#stats-leaderboard-container.d-none.row.align-items-center
