Needs check for features in DB, floating action button on map (closes #52)

--- a/website/templates/components/map.pug
+++ b/website/templates/components/map.pug
@@ -25,9 +25,14 @@ script.
 	});
 
 	map.addControl(new mapboxgl.NavigationControl({ showCompass: false }));
+	map.loadImage('/images/exclamation.png', (error, image) => {
+		if (error) { console.error(error); }
+		else { map.addImage('pdm-exclamation', image); }
+	});
 
 	// Add feature button
-	createFeatureButton(document.querySelector("#pdm-map-sidebar .pdm-sidebar-buttons"), "add", null, { mini: true });
+	createFeatureButton(document.body, "add", "btn-floating btn-primary d-md-none", { mini: true });
+	createFeatureButton(document.querySelector("#pdm-map-sidebar .pdm-sidebar-buttons"), "add", "btn-outline-primary btn-sm d-none d-md-block", { mini: true });
 	if(editors.pdm) {
 		createFeatureButton(document.getElementById("legend-edit-button"), "add", "btn-block", { mapcoords: true, textnote: true });
 	}
