--- a/website/templates/style.css
+++ b/website/templates/style.css
@@ -40,6 +40,18 @@ a.dropdown-item:not([href]):hover {
 	max-height: 100%;
 }
 
+.btn-floating {
+	position: absolute;
+	right: 10px;
+	bottom: 30px;
+	z-index: 90;
+	width: 70px;
+	height: 70px;
+	border-radius: 35px;
+	line-height: 60px;
+	font-size: 25px;
+}
+
 /*
 * Blog posts
 */
@@ -243,7 +255,7 @@ a.navbar-brand:hover {
 	left: 5%;
 	right: 5%;
 	text-align: center;
-	z-index: 10;
+	z-index: 100;
 }
 
 @media (min-width: 768px) {
@@ -279,6 +291,12 @@ a.navbar-brand:hover {
 
 #pdm-map-sidebar .pdm-sidebar-buttons button {
 	background-color: white;
+}
+
+@media (max-width: 768px) {
+	#pdm-map-sidebar .pdm-sidebar-buttons button:first-child {
+		border-radius: .2rem !important;
+	}
 }
 
 #pdm-map-sidebar .pdm-sidebar-buttons button.btn-outline-primary {
