Update logo (closes #54)

--- a/website/templates/pages/error.pug
+++ b/website/templates/pages/error.pug
@@ -11,7 +11,7 @@ block content
 		h2 Erreur #{httpcode}
 		//- Wide image
 		a(href="/")
-			img.w-100.rounded-lg(src="/images/httperror.jpg" title="Retour à l'accueil" alt="Erreur #{httpcode} : rien que le désert ici...")
+			img.w-100.rounded-lg(src="/images/httperror.png" title="Retour à l'accueil" alt="Erreur #{httpcode} : rien que le désert ici...")
 
 		//- Where to go
 		div.lead.text-center.m-5
