--- a/website/templates/components/map_navbar.pug
+++ b/website/templates/components/map_navbar.pug
@@ -1,6 +1,6 @@
 nav.navbar.navbar-expand-sm.navbar-light.bg-light.d-flex.justify-content-between.align-items-center.flex-nowrap
 	a.navbar-brand(href="./")
-		img.d-none.d-sm-inline-block(src="/images/logo.png" alt="Projet du mois OpenStreetMap" title="Retour")
+		img.d-none.d-sm-inline-block(src="/images/logo_mini.png" alt="Projet du mois OpenStreetMap" title="Retour")
 		img.d-inline-block.d-sm-none(src="/images/favicon.png" alt="Projet du mois OpenStreetMap" title="Retour")
 
 	include geocoder.pug
